--- a/style.css
+++ b/style.css
@@ -1,3 +1,63 @@
 /* 
     The style sheet for the general page
 */
+
+/* 
+    General style
+*/
+
+nav, header, footer {
+    display: block;
+}
+
+body {
+    line-height: 1;
+    margin: 0px;
+    font-family: 'Comfortaa', cursive;
+}
+
+
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Archivo Narrow', sans-serif;
+    text-transform: uppercase;
+}
+
+/* 
+    Nav bar style
+*/
+
+nav {
+    width: 100%;
+    margin: 0;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+ul.topnav li {
+    list-style-type: none;
+    float: left;
+}
+
+ul.topnav li.topnav-right {
+    float: right;
+}
+
+ul.topnav li a {
+    display: block;
+    text-decoration: none;
+    min-height: 16px;
+    padding: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    color: black;
+}
+
+ul.topnav li a:hover {
+    color: rgb(102, 91, 91);
+    background: rgba(255, 228, 196, 0.5);
+}
