--- a/style.css
+++ b/style.css
@@ -13,9 +13,22 @@ nav, header, footer {
 body {
     line-height: 1;
     margin: 0px;
-    font-family: 'Comfortaa', cursive;
+    /* font-family: 'Comfortaa', cursive; */
 }
 
+label {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+p {
+    font-size: 28px;
+    line-height: 1.2;
+}
+
+article p {
+    padding: 20px;
+}
 
 h1, h2, h3, h4, h5, h6{
     font-family: 'Archivo Narrow', sans-serif;
@@ -24,6 +37,43 @@ h1, h2, h3, h4, h5, h6{
 
 #logo {
     font-family: 'Lobster', cursive;
+}
+
+section {
+    width: 100%;
+    margin: auto;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.row::after {
+    display: table;
+    clear: both;
+    content: "";
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+* {
+    box-sizing: border-box;
 }
 
 /* 
@@ -71,6 +121,84 @@ ul.topnav li.dropdownicon {
 }
 
 /* 
+    Custom styles
+*/
+
+section#with-gradient {
+    background: linear-gradient(rgb(132, 150, 209), rgba(132, 150, 209, 0.7));
+}
+
+div.box {
+    background: white;
+    margin: 25px;
+    padding: 36px 24px 40px 24px;
+    border-radius: 7px;
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, .15),
+    0 2px 3px 0 rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+div.icon {
+    width: 100%;
+}
+
+.leftside-col {
+    margin-left: 20%;
+}
+
+.rightside-col {
+    margin-left: 10%;
+}
+
+h1.large-h1 {
+    color: white;
+    font-size: 36px;
+    margin: 0;
+    line-height: 50px;
+}
+
+h1.section2header {
+    font-size: 50px;
+    text-align: center;
+}
+
+form h2 {
+    color: white;
+    font-size: 20px;
+}
+
+input[class="inputbox"] {
+    font-size: 15px;
+    width: 400px;
+    min-width: 100px;
+    border: none;
+    border-bottom: 2px solid rgb(92, 92, 122);
+    background: transparent;
+    padding: 7px;
+}
+
+button {
+    font-size: 32px;
+    color: white;
+    background: rgb(90, 90, 146);
+    padding: 15px 50px;
+    display: block;
+    text-align: center;
+    margin: 5px;
+    border-radius: 10px;
+}
+
+button.learnmore {
+    display: block;
+    margin: auto;
+}
+
+div.infoshirt img {
+    display: block;
+    margin: auto;
+}
+
+/* 
     Mobile responsivenes
 */
 
@@ -103,4 +231,38 @@ ul.topnav li.dropdownicon {
         display: block;
         text-align: left;
     }
+
+    article p {
+        font-size: 23px;
+    }
+
+    .col-6, .col-4, .col-7, .col-5 {
+        width: 100%;
+        margin: 0;
+    }
+
+    div.box {
+        padding: 5px;
+        display: block;
+    }
+
+    div.rightside-col,div.leftside-col {
+        margin: 10%;
+    }
+
+    input[class="inputbox"]{
+        width: 80%;
+    }
+
+    div.rightside-col iframe {
+        width: 100%;
+        margin: 0px;
+        overflow: hidden;
+    }
+
+    h1.section2header {
+        font-size: 36px;
+    }
+
+
 }
